--- a/style.css
+++ b/style.css
@@ -133,12 +133,15 @@ img {
 
 .three {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    background-color: #E5E7EB;
+    padding: 20px;
+    gap: 20px;
 
-    padding: 50px;
+
+    background-color: #E5E7EB;
+    flex-direction: column;    
+
+    justify-content: center;
+    text-align: center;
 
 
 }
@@ -159,6 +162,12 @@ img {
 
 .four {
     display: flex;
+    flex-direction: column;
+    padding: 50px;
+    display: flex;
+    padding: 20px;
+    gap: 20px;
+    
     justify-content: center;
     align-items: center;
 
